<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearlayout_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/primary"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="87dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintTop_toTopOf="@id/linearlayout_header" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_your_costs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/your_costs"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/text_value" />

    <TextView
        android:id="@+id/text_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/your_value"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@id/linearlayout_header" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_map"
        app:layout_constraintEnd_toStartOf="@id/edittext_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_header" />

    <EditText
        android:id="@+id/edittext_map"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:autofillHints="number"
        android:background="@drawable/input_custom"
        android:hint="@string/distance"
        android:inputType="number"
        android:paddingHorizontal="16dp"
        android:paddingVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_header" />

    <TextView
        android:id="@+id/text_total_km"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/total_km"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edittext_map" />

    <ImageView
        android:id="@+id/imageview_gas"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_gas"
        app:layout_constraintEnd_toStartOf="@id/edittext_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_total_km" />

    <EditText
        android:id="@+id/edittext_gas"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:autofillHints="number"
        android:background="@drawable/input_custom"
        android:hint="@string/Price"
        android:inputType="number"
        android:paddingHorizontal="16dp"
        android:paddingVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/text_total_km" />

    <TextView
        android:id="@+id/text_total_gas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/total_gas"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edittext_gas" />

    <ImageView
        android:id="@+id/imageview_car"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_car"
        app:layout_constraintEnd_toStartOf="@id/edittext_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_total_gas" />

    <EditText
        android:id="@+id/edittext_car"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:autofillHints="number"
        android:background="@drawable/input_custom"
        android:hint="@string/Car"
        android:inputType="number"
        android:paddingHorizontal="16dp"
        android:paddingVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/text_total_gas" />

    <TextView
        android:id="@+id/text_total_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kms_for_liter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edittext_car" />

    <Button
        android:layout_width="158dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_custom"
        app:backgroundTint="@null"
        android:text="Calcular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_total_car" />

    <LinearLayout
        android:id="@+id/linearlayout_footer"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/primary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageview_footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="@id/linearlayout_footer" />

    <TextView
        android:id="@+id/textview_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Copyright@ JhonatanBS"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/imageview_footer" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textview_copyright" />

</androidx.constraintlayout.widget.ConstraintLayout>